add hover to octocat icon

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
     width: 33%;
     height: 45px;
     overflow: hidden;
+    opacity: .75;
+  }
+  .github:hover {
+    opacity: 1;
   }
   #octocat-eyes {
     position: absolute;
