change cat anime

--- a/index.html
+++ b/index.html
@@ -84,10 +84,13 @@
     width: 33%;
     height: 45px;
     overflow: hidden;
-    opacity: .75;
+    opacity: .9;
+    transition: all .66s cubic-bezier(0.68, -0.55, 0.27, 1.55);
   }
   .github:hover {
-    opacity: 1;
+    /*opacity: .9;*/
+    height: 50px;
+    top: 203px;
   }
   #octocat-eyes {
     position: absolute;
