--- a/appwx/index.html
+++ b/appwx/index.html
@@ -17,10 +17,10 @@
     <link rel="shortcut icon" href=// >
     <link rel=bookmark href=// type=image/x-icon>
     <link rel=apple-touch-icon-precomposed href=// >
-    <title>Vue多页面结构，alpha</title>
-<link href=./static/css/index.2595213dc3f40359aafd.css rel=stylesheet></head>
+    <title>猫扑文学 - 首页</title>
+<link href=./static/css/index.afbfe2d85112d2801edd.css rel=stylesheet></head>
 <body>
   <div id=app></div>
-<script type=text/javascript src=./static/js/manifest.8ef265689362d9049489.js></script><script type=text/javascript src=./static/js/vendor.fa932d8708f357282ba9.js></script><script type=text/javascript src=./static/js/index.2595213dc3f40359aafd.js></script></body>
+<script type=text/javascript src=./static/js/manifest.6c5d2b3c934b7e81d7f3.js></script><script type=text/javascript src=./static/js/vendor.fa932d8708f357282ba9.js></script><script type=text/javascript src=./static/js/index.afbfe2d85112d2801edd.js></script></body>
 
 </html>
