--- a/appwx/appwx/index.html
+++ b/appwx/appwx/index.html
@@ -17,10 +17,10 @@
     <link rel="shortcut icon" href=// >
     <link rel=bookmark href=// type=image/x-icon>
     <link rel=apple-touch-icon-precomposed href=// >
-    <title>文学 - 分类</title>
-<link href=./static/css/catalogue.58e0469c02d18341253b.css rel=stylesheet></head>
+    <title>猫扑文学 - 首页</title>
+<link href=./static/css/index.e3b1b61018fac12ebbea.css rel=stylesheet></head>
 <body>
   <div id=app></div>
-<script type=text/javascript src=./static/js/manifest.f40c854c70f9e0336dfb.js></script><script type=text/javascript src=./static/js/vendor.4335fa8a93f89aa0046e.js></script><script type=text/javascript src=./static/js/catalogue.58e0469c02d18341253b.js></script></body>
+<script type=text/javascript src=./static/js/manifest.488c7cf8dbe3b99f57e0.js></script><script type=text/javascript src=./static/js/vendor.4335fa8a93f89aa0046e.js></script><script type=text/javascript src=./static/js/index.e3b1b61018fac12ebbea.js></script></body>
 
 </html>
