--- a/斗鱼2017鱼乐盛典.html
+++ b/斗鱼2017鱼乐盛典.html
@@ -1520,7 +1520,7 @@
                                 onerror="this.src='https://shark.douyucdn.cn//app/douyu/res/page/annualfestival/favicon.png?v=20171101';this.onerror=null;"
                                 class="mCS_img_loaded">
                             </a>
-                            <a href="/156277" class="area-list-name" title="White55开解说" target="_blank">White55开解说</a>
+                            <a href="/156277" class="area-list-name" title="女流66" target="_blank">女流66</a>
                             <span class="area-list-num">59465192</span>
                           </li>
                           <li>
@@ -2047,8 +2047,9 @@
   </div>
   <script type="text/javascript" charset="utf-8" src="https://shark.douyucdn.cn/shark/lib/js/port/shark-all.js?nv=v7.213"></script>
   <script type="text/javascript" charset="utf-8" src="https://shark.douyucdn.cn/shark/lib/js/lib/jquery.js?nv=v7.213"></script>
-  <script type="text/javascript" charset="utf-8" src="https://shark.douyucdn.cn/app/douyu/js/page/annualfestival/app-semifinal-all.js?nv=v7.213"></script>
-  <script type="text/javascript" charset="utf-8" src="https://shark.douyucdn.cn/stream/dist/dys-douyutv.js?nv=v7.213"></script>
+  <script type="text/javascript" charset="utf-8" src="js/douyu.js"></script>
+  <!-- <script type="text/javascript" charset="utf-8" src="https://shark.douyucdn.cn/app/douyu/js/page/annualfestival/app-semifinal-all.js?nv=v7.213"></script> -->
+  <!-- <script type="text/javascript" charset="utf-8" src="https://shark.douyucdn.cn/stream/dist/dys-douyutv.js?nv=v7.213"></script> -->
 
   <!-- 电梯浮层 -->
   <div class="lift" style="display: none;">
