--- a/斗鱼2017鱼乐盛典.html
+++ b/斗鱼2017鱼乐盛典.html
@@ -13,9 +13,9 @@
   <link href="/favicon.ico" type="image/x-icon" rel="icon">
   <link href="/favicon.ico" type="image/x-icon" rel="shortcut icon">
 
-  <link rel="stylesheet" type="text/css" href="https://shark.douyucdn.cn/app/douyu/css/com/app-all.css?nv=v7.213">
+  <!-- <link rel="stylesheet" type="text/css" href="https://shark.douyucdn.cn/app/douyu/css/com/app-all.css?nv=v7.213"> -->
   <link rel="stylesheet" type="text/css" href="https://shark.douyucdn.cn/app/douyu/css/page/annualfestival1/app-all.css?nv=v7.213">
-  <script src="//hm.baidu.com/hm.js?e99aee90ec1b2106afe7ec3b199020a7"></script>
+  <!-- <script src="//hm.baidu.com/hm.js?e99aee90ec1b2106afe7ec3b199020a7"></script> -->
   <script type="text/javascript">
     var $SYS = {
       "cookie_pre": "acf_",
@@ -1508,10 +1508,7 @@
                     <span class="al-title-name">主播</span>
                     <span class="al-title-num">荣耀值</span>
                   </div>
-                  <div class="area-list-table mCustomScrollbar _mCS_2">
-                    <div id="mCSB_2" class="mCustomScrollBox mCS-light mCSB_vertical mCSB_inside" style="max-height: none;"
-                      tabindex="0">
-                      <div id="mCSB_2_container" class="mCSB_container" style="position: relative; top: 0px; left: 0px;" dir="ltr">
+                  <div class="area-list-table">
                         <ul class="area-list-inner">
                           <li>
                             <span class="area-list-rank">1</span>
@@ -1808,17 +1805,6 @@
                             <span class="area-list-num">62114</span>
                           </li>
                         </ul>
-                      </div>
-                      <div id="mCSB_2_scrollbar_vertical" class="mCSB_scrollTools mCSB_2_scrollbar mCS-light mCSB_scrollTools_vertical"
-                        style="display: block;">
-                        <div class="mCSB_draggerContainer">
-                          <div id="mCSB_2_dragger_vertical" class="mCSB_dragger" style="position: absolute; min-height: 30px; top: 0px; display: block; height: 169px; max-height: 495px;">
-                            <div class="mCSB_dragger_bar" style="line-height: 30px;"></div>
-                          </div>
-                          <div class="mCSB_draggerRail"></div>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -2049,7 +2035,7 @@
   <script type="text/javascript" charset="utf-8" src="https://shark.douyucdn.cn/shark/lib/js/lib/jquery.js?nv=v7.213"></script>
   <script type="text/javascript" charset="utf-8" src="js/douyu.js"></script>
   <!-- <script type="text/javascript" charset="utf-8" src="https://shark.douyucdn.cn/app/douyu/js/page/annualfestival/app-semifinal-all.js?nv=v7.213"></script> -->
-  <!-- <script type="text/javascript" charset="utf-8" src="https://shark.douyucdn.cn/stream/dist/dys-douyutv.js?nv=v7.213"></script> -->
+  <script type="text/javascript" charset="utf-8" src="https://shark.douyucdn.cn/stream/dist/dys-douyutv.js?nv=v7.213"></script>
 
   <!-- 电梯浮层 -->
   <div class="lift" style="display: none;">
