--- a/斗鱼2017鱼乐盛典.html
+++ b/斗鱼2017鱼乐盛典.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="renderer" content="webkit">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <title>斗鱼2017鱼乐盛典</title>
   <meta name="keywords" content="斗鱼2017鱼乐盛典，娱乐盛典，年度盛典，斗鱼，2017鱼乐盛典，斗鱼">
   <meta name="description" content="斗鱼2017鱼乐盛典预赛暨分区冠军赛专题页">
