--- a/infinite/index.html
+++ b/infinite/index.html
@@ -17,7 +17,7 @@
   <meta name="x5-orientation" content="portrait">
   <meta name="x5-fullscreen" content="true">
   <meta name="x5-page-mode" content="app">
-  <title>无限滚动</title>
+  <title>无限滚动beta</title>
   <!-- <link rel="stylesheet" href="css/index.css"> -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/item.css">
