--- a/infinite/index.html
+++ b/infinite/index.html
@@ -17,7 +17,7 @@
   <meta name="x5-orientation" content="portrait">
   <meta name="x5-fullscreen" content="true">
   <meta name="x5-page-mode" content="app">
-  <title>无限滚动beta</title>
+  <title>无限滚动 - 内存回收</title>
   <!-- <link rel="stylesheet" href="css/index.css"> -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/item.css">
@@ -172,9 +172,11 @@
   <!-- <div class="list">
     <ul id="timeline">
     </ul> -->
+    <div class="model"></div>
   </div>
 
   <script src="js/promise-polyfill.js"></script>
+  <script src="js/stats.min.js"></script>
   <script src="js/global.js"></script>
   <script src="js/infinite2.js"></script>
   <!-- <script>
@@ -255,13 +257,12 @@ GetData.prototype = {
     return new Promise(function(resolve, reject) {
       // Assume 50 ms per item.
       setTimeout(function() {
-        console.time('render:')
         var items = [];
         for (var i = 0; i < Math.abs(count); i++) {
           items[i] = randomItem(this.nextItem_++);
         }
         resolve(Promise.all(items));
-      }.bind(this), 1500 /* Simulated 1 second round trip time */ );
+      }.bind(this), 1000 /* Simulated 1 second round trip time */ );
     }.bind(this));
   },
 
@@ -299,45 +300,72 @@ GetData.prototype = {
   },
 };
 
+
+var stats = new Stats();
+// var domPanel = new Stats.Panel('Time MS', '#0ff', '#002');
+var domPanel = new Stats.Panel('DOM nodes', '#0ff', '#002');
+stats.dom.style.position = 'relative';
+stats.dom.style.float = 'left';
+
+var stats2 = new Stats();
+var domPanel2 = new Stats.Panel('FPS', '#ff8', '#221');
+stats2.dom.style.position = 'relative';
+stats2.dom.style.float = 'left';
+
 document.addEventListener('DOMContentLoaded', function() {
+  // TODO: 滚动监听优化
   window.scroller =
     new InfiniteScroller(
       document.querySelector('#chat-timeline'),
       new GetData()
     );
 
-  // var stats = new Stats();
-  // var domPanel = new Stats.Panel('DOM Nodes', '#0ff', '#002');
-  // stats.addPanel(domPanel);
-  // stats.showPanel(3);
-  // document.body.appendChild(stats.dom);
-  // var TIMEOUT = 100;
-  // setTimeout(function timeoutFunc() {
-  //   // Only update DOM node graph when we have time to spare to call
-  //   // numDomNodes(), which is a fairly expensive function.
-  //   requestIdleCallback(function() {
-  //     domPanel.update(numDomNodes(document.body), 1500);
-  //     setTimeout(timeoutFunc, TIMEOUT);
-  //   });
-  // }, TIMEOUT);
+  stats.addPanel(domPanel);
+  stats2.addPanel(domPanel2);
+  stats.showPanel(3);
+  stats2.showPanel(3);
+  document.querySelector('.model').appendChild(stats2.dom);
+  document.querySelector('.model').appendChild(stats.dom);
+  var TIMEOUT = 100;
+  setTimeout(function timeoutFunc() {
+    // Only update DOM node graph when we have time to spare to call
+    // numDomNodes(), which is a fairly expensive function.
+    requestIdleCallback(function() {
+      domPanel.update(numDomNodes(document.body), 1500);
+      // domPanel2.update(g_fps, 60);
+      setTimeout(timeoutFunc, TIMEOUT);
+    });
+  }, TIMEOUT);
 });
 
-// var then = Date.now()
-// var count = 0
+// 计算节点数
+function numDomNodes(node) {
+  if(!node.children || node.children.length == 0)
+    return 0;
+  var childrenCount = Array.from(node.children).map(numDomNodes);
+  return node.children.length + childrenCount.reduce(function(p, c){ return p + c; }, 0);
+}
 
-// function nextFrame(){
-//   requestAnimationFrame(function(){
-//     count ++
-//     if(count % 20 === 0){
-//       var time = (Date.now() - then) / count
-//       var ms = Math.round(time*1000) / 1000
-//       var fps = Math.round(100000/ms) / 100
-//       console.log(`count: ${count}\t${ms}ms/frame\t${fps}fps`)
-//     }
-//     nextFrame()
-//   })
-// }
-// nextFrame()
+var then = performance.now()
+var count = 0
+var g_fps = 0
+
+function nextFrame(){
+  requestAnimationFrame(function(){
+    count ++
+    if(count % 20 === 0){
+      var time = (performance.now() - then) / count
+      var ms = Math.round(time*1000) / 1000
+      var fps = Math.round(100000/ms) / 100
+      g_fps = fps
+
+      domPanel2.update(g_fps, 60);
+      // console.log(`count: ${count}\t${ms}ms/frame\t${fps}fps`)
+    }
+    nextFrame()
+  })
+}
+nextFrame()
   </script>
 </body>
 
