--- a/infinite/index.html
+++ b/infinite/index.html
@@ -331,7 +331,7 @@ document.addEventListener('DOMContentLoaded', function() {
     // Only update DOM node graph when we have time to spare to call
     // numDomNodes(), which is a fairly expensive function.
     requestIdleCallback(function() {
-      domPanel.update(numDomNodes(document.body), 1500);
+      // domPanel.update(numDomNodes(document.body), 1500);
       // domPanel2.update(g_fps, 60);
       setTimeout(timeoutFunc, TIMEOUT);
     });
@@ -360,6 +360,7 @@ function nextFrame(){
       g_fps = fps
 
       domPanel2.update(g_fps, 60);
+      domPanel.update(numDomNodes(document.body), 1500);
       // console.log(`count: ${count}\t${ms}ms/frame\t${fps}fps`)
     }
     nextFrame()
