remove: dom count

--- a/infinite/index.html
+++ b/infinite/index.html
@@ -356,7 +356,7 @@ function nextFrame(){
       g_fps = fps
 
       domPanel2.update(g_fps, 60);
-      domPanel.update(numDomNodes(document.body), 3000);
+      // domPanel.update(numDomNodes(document.body), 3000);
       // console.log(`count: ${count}\t${ms}ms/frame\t${fps}fps`)
     }
     nextFrame()
