--- a/infinite/index20.1.html
+++ b/infinite/index20.1.html
@@ -92,8 +92,7 @@
       </div>
       <div class="item-right">-100书币</div> -->
       <figure>
-        <!-- <img alt="" class="placeholder-img" data-src="http://images01.mopimg.cn/imgs/20171208/20171208_029f9d50e5ea822c457470f0595d0c6a_3_4_200.jpg" src="http://images01.mopimg.cn/imgs/20171208/20171208_029f9d50e5ea822c457470f0595d0c6a_3_4_200.jpg" lazy="loaded"> -->
-        <img alt="" class="placeholder-img" src="null" lazy="loaded">
+        <img alt="" class="placeholder-img" data-src="http://images01.mopimg.cn/imgs/20171208/20171208_029f9d50e5ea822c457470f0595d0c6a_3_4_200.jpg" src="null" lazy="loaded">
       </figure>
       <div class="a-item-wrap">
         <p class="title ellipsis">婚色撩人狼性总裁轻点爱</p>
@@ -123,7 +122,6 @@
       <!-- TODO: -->
     </li>
   </div>
-
   <ul id="chat-timeline"></ul>
 
   <!-- 有消费记录时 -->
@@ -168,8 +166,6 @@
   <!-- <div class="list">
     <ul id="timeline">
     </ul> -->
-
-    <div class="model"></div>
   </div>
 
   <script src="js/promise-polyfill.js"></script>
@@ -199,7 +195,6 @@
   </script> -->
   <script>
 var INIT_TIME = new Date().getTime();
-var isiOS = !!navigator.userAgent.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
 
 // 随机DOM 有图/无图
 /**
@@ -217,7 +212,6 @@ function randomItem(id) {
       id: id,
       avatar: Math.floor(Math.random()*NUM_AVATARS),
       self: Math.random() < 0.1,
-      img: '//placekitten.com/' + Math.floor(Math.random()*50+100) + '/' + Math.floor(Math.random()*100+200),
       image: Math.random() < 1.0 / 20 ? Math.floor(Math.random()*NUM_IMAGES) : '',
       time: new Date(Math.floor(INIT_TIME + id*20*1000 + Math.random()*20*1000)),
       message: pickRandom(MESSAGES)
@@ -251,7 +245,7 @@ function GetData() {
 
 GetData.prototype = {
   fetch: function(count) {
-    // Fetch at least 20 or count more objects for display.
+    // Fetch at least 10 or count more objects for display.
     count = Math.max(20, count);
     return new Promise(function(resolve, reject) {
       // Assume 50 ms per item.
@@ -261,7 +255,7 @@ GetData.prototype = {
           items[i] = randomItem(this.nextItem_++);
         }
         resolve(Promise.all(items));
-      }.bind(this), 1000 /* Simulated 1 second round trip time */ );
+      }.bind(this), 1 /* Simulated 1 second round trip time */ );
     }.bind(this));
   },
 
@@ -274,9 +268,7 @@ GetData.prototype = {
     div = div || this.messageTemplate_.cloneNode(true);
     div.dataset.id = item.id;
     // 填充内容
-    div.querySelector('.placeholder-img').src = item.img;
-    div.querySelector('.author').textContent = item.time.toString();
-    // div.querySelector('.placeholder-img').src = 'images/avatar' + item.avatar + '.jpg';
+    // div.querySelector('.avatar').src = 'images/avatar' + item.avatar + '.jpg';
     // div.querySelector('.bubble p').textContent = item.message;
     // div.querySelector('.bubble .posted-date').textContent = item.time.toString();
 
@@ -302,49 +294,35 @@ GetData.prototype = {
 };
 
 
-var stats = new Stats();
-// var domPanel = new Stats.Panel('Time MS', '#0ff', '#002');
-var domPanel = new Stats.Panel('DOM nodes', '#0ff', '#002');
-stats.dom.style.position = 'relative';
-stats.dom.style.float = 'left';
 
-var stats2 = new Stats();
-var domPanel2 = new Stats.Panel('FPS', '#ff8', '#221');
-stats2.dom.style.position = 'relative';
-stats2.dom.style.float = 'left';
+var stats = new Stats();
+var domPanel = new Stats.Panel('Time MS', '#0ff', '#002');
+var domPanel2 = new Stats.Panel('FPS Test', '#ff8', '#221');
 
 document.addEventListener('DOMContentLoaded', function() {
-  // TODO: 滚动监听优化
-  window.scroller =
-    new InfiniteScroller(
-      document.querySelector('#chat-timeline'),
-      new GetData()
-    );
+  // window.scroller =
+  //   new InfiniteScroller(
+  //     document.querySelector('#chat-timeline'),
+  //     new GetData()
+  //   );
+  add20()
 
   stats.addPanel(domPanel);
-  stats2.addPanel(domPanel2);
-  if (isiOS) {
-    stats.showPanel(2);
-    stats2.showPanel(2);
-  } else {
-    stats.showPanel(3);
-    stats2.showPanel(3);
-  }
-  document.querySelector('.model').appendChild(stats2.dom);
-  document.querySelector('.model').appendChild(stats.dom);
+  stats.addPanel(domPanel2);
+  stats.showPanel(3);
+  document.body.appendChild(stats.dom);
   // var TIMEOUT = 100;
   // setTimeout(function timeoutFunc() {
   //   // Only update DOM node graph when we have time to spare to call
   //   // numDomNodes(), which is a fairly expensive function.
   //   requestIdleCallback(function() {
-  //     domPanel.update(numDomNodes(document.body), 3000);
-  //     // domPanel2.update(g_fps, 60);
+  //     // domPanel.update(numDomNodes(document.body), 1500);
+  //     domPanel2.update(g_fps, 60);
   //     setTimeout(timeoutFunc, TIMEOUT);
   //   });
   // }, TIMEOUT);
 });
 
-// 计算节点数
 function numDomNodes(node) {
   if(!node.children || node.children.length == 0)
     return 0;
@@ -364,15 +342,64 @@ function nextFrame(){
       var ms = Math.round(time*1000) / 1000
       var fps = Math.round(100000/ms) / 100
       g_fps = fps
-
       domPanel2.update(g_fps, 60);
-      domPanel.update(numDomNodes(document.body), 3000);
       // console.log(`count: ${count}\t${ms}ms/frame\t${fps}fps`)
     }
     nextFrame()
   })
 }
 nextFrame()
+
+// document.addEventListener('DOMContentLoaded', add20);
+
+function add20() {
+  var source_ = new GetData()
+  // var tombstone_ = document.querySelector("#temp > .item-novel.tombstone");
+  var messageTemplate_ = document.querySelector("#temp > .a-item:not(.tombstone)");
+  var nodes = document.createElement('DIV');
+  source_.fetch(20).then(items => {
+    // console.log(items.length)
+    // console.time('render:')
+    var _timing = performance.now()
+    var mother = document.getElementById('chat-timeline')
+    var i = 0;
+    for (i = 0; i < items.length; i++) {
+      nodes.appendChild(messageTemplate_.cloneNode(true))
+      // document.getElementById('chat-timeline').appendChild(nodes);
+    }
+    mother.appendChild(nodes)
+
+    // console.timeEnd('render:')
+    domPanel.update(performance.now() - _timing, 50);
+  })
+}
+
+setInterval(function () {
+  add20()
+}, 500)
+
+// document.addEventListener('DOMContentLoaded', function() {
+//   window.scroller =
+//     new InfiniteScroller(
+//       document.querySelector('#chat-timeline'),
+//       new GetData()
+//     );
+
+  // var stats = new Stats();
+  // var domPanel = new Stats.Panel('DOM Nodes', '#0ff', '#002');
+  // stats.addPanel(domPanel);
+  // stats.showPanel(3);
+  // document.body.appendChild(stats.dom);
+  // var TIMEOUT = 100;
+  // setTimeout(function timeoutFunc() {
+  //   // Only update DOM node graph when we have time to spare to call
+  //   // numDomNodes(), which is a fairly expensive function.
+  //   requestIdleCallback(function() {
+  //     domPanel.update(numDomNodes(document.body), 1500);
+  //     setTimeout(timeoutFunc, TIMEOUT);
+  //   });
+  // }, TIMEOUT);
+// });
   </script>
 </body>
 
