--- a/infinite/index20.html
+++ b/infinite/index20.html
@@ -17,7 +17,7 @@
   <meta name="x5-orientation" content="portrait">
   <meta name="x5-fullscreen" content="true">
   <meta name="x5-page-mode" content="app">
-  <title>无限滚动</title>
+  <title>无限滚动 - 内存回收</title>
   <!-- <link rel="stylesheet" href="css/index.css"> -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/item.css">
@@ -28,13 +28,7 @@
         recalc = function() {
           var clientWidth = docEl.clientWidth;
           if (!clientWidth) return;
-          if (clientWidth >= 750 && clientWidth <= 1000) {
-            docEl.style.fontSize = 100 + 'px';
-          } else if (clientWidth >= 1000) {
-            docEl.style.fontSize = 100 * (1000 / 750) + 'px';
-          } else {
-            docEl.style.fontSize = 100 * (clientWidth / 750) + 'px';
-          }
+          docEl.style.fontSize = 100 * (clientWidth / 750) + 'px';
         };
       if (!doc.addEventListener) return;
       win.addEventListener(resizeEvt, recalc, false);
@@ -98,11 +92,11 @@
       </div>
       <div class="item-right">-100书币</div> -->
       <figure>
-        <img alt="" class="placeholder-img" data-src="http://images01.mopimg.cn/imgs/20171208/20171208_029f9d50e5ea822c457470f0595d0c6a_3_4_200.jpg" src="http://images01.mopimg.cn/imgs/20171208/20171208_029f9d50e5ea822c457470f0595d0c6a_3_4_200.jpg" lazy="loaded">
+        <img alt="" class="placeholder-img" data-src="http://images01.mopimg.cn/imgs/20171208/20171208_029f9d50e5ea822c457470f0595d0c6a_3_4_200.jpg" src="null" lazy="loaded">
       </figure>
       <div class="a-item-wrap">
-        <p class="title ellipsis">婚色撩人狼性总裁轻点爱</p>
-        <p class="author">木皎皎</p>
+        <p class="title ellipsis">贵女毒心邪王嗜宠无下限</p>
+        <p class="author">1999</p>
         <p class="desc">“每月工资多少？身体有没有缺陷？外面有没有女人？”某女居高临下的看着某总裁，一脸严肃。沈大少唇角轻扬，“有没有缺陷，有没有女人你不是最清楚吗，至于工资……”“我养你！现在去领证！”还未说完，就被某个迫不及待的女人打断了…直接拖走，目标，民政局……总之这是一个先睡后婚的沈家大少诱妻，拐妻，最后宠妻的故事。</p>
         <div class="bottom">
           <span>总裁</span>
@@ -172,6 +166,7 @@
   <!-- <div class="list">
     <ul id="timeline">
     </ul> -->
+    <div class="model"></div>
   </div>
 
   <script src="js/promise-polyfill.js"></script>
@@ -218,6 +213,7 @@ function randomItem(id) {
       id: id,
       avatar: Math.floor(Math.random()*NUM_AVATARS),
       self: Math.random() < 0.1,
+      img: '//placekitten.com/' + Math.floor(Math.random()*50+100) + '/' + Math.floor(Math.random()*100+200),
       image: Math.random() < 1.0 / 20 ? Math.floor(Math.random()*NUM_IMAGES) : '',
       time: new Date(Math.floor(INIT_TIME + id*20*1000 + Math.random()*20*1000)),
       message: pickRandom(MESSAGES)
@@ -261,7 +257,7 @@ GetData.prototype = {
           items[i] = randomItem(this.nextItem_++);
         }
         resolve(Promise.all(items));
-      }.bind(this), 1 /* Simulated 1 second round trip time */ );
+      }.bind(this), 1000 /* Simulated 1 second round trip time */ );
     }.bind(this));
   },
 
@@ -274,6 +270,8 @@ GetData.prototype = {
     div = div || this.messageTemplate_.cloneNode(true);
     div.dataset.id = item.id;
     // 填充内容
+    div.querySelector('.placeholder-img').src = item.img;
+    div.querySelector('.author').textContent = item.time.toString();
     // div.querySelector('.avatar').src = 'images/avatar' + item.avatar + '.jpg';
     // div.querySelector('.bubble p').textContent = item.message;
     // div.querySelector('.bubble .posted-date').textContent = item.time.toString();
@@ -299,19 +297,23 @@ GetData.prototype = {
   },
 };
 
-
-
 var stats = new Stats();
-var domPanel = new Stats.Panel('Time MS', '#0ff', '#002');
-var domPanel2 = new Stats.Panel('FPS Test', '#ff8', '#221');
+var domPanel = new Stats.Panel('DOM nodes', '#0ff', '#002');
+stats.dom.style.position = 'relative';
+stats.dom.style.float = 'left';
+
+var stats2 = new Stats();
+var domPanel2 = new Stats.Panel('FPS', '#ff8', '#221');
+stats2.dom.style.position = 'relative';
+stats2.dom.style.float = 'left';
 
 document.addEventListener('DOMContentLoaded', function() {
-  // window.scroller =
-  //   new InfiniteScroller(
-  //     document.querySelector('#chat-timeline'),
-  //     new GetData()
-  //   );
-  add20()
+  window.scroller =
+    new InfiniteScroller(
+      document.querySelector('#chat-timeline'),
+      new GetData()
+    );
+  // add20()
 
   stats.addPanel(domPanel);
   stats.addPanel(domPanel2);
@@ -349,63 +351,13 @@ function nextFrame(){
       var fps = Math.round(100000/ms) / 100
       g_fps = fps
       domPanel2.update(g_fps, 60);
+      domPanel.update(numDomNodes(document.body), 3000);
       // console.log(`count: ${count}\t${ms}ms/frame\t${fps}fps`)
     }
     nextFrame()
   })
 }
 nextFrame()
-
-// document.addEventListener('DOMContentLoaded', add20);
-
-function add20() {
-  var source_ = new GetData()
-  // var tombstone_ = document.querySelector("#temp > .item-novel.tombstone");
-  var messageTemplate_ = document.querySelector("#temp > .a-item:not(.tombstone)");
-  var nodes = document.createElement('DIV');
-  source_.fetch(20).then(items => {
-    // console.log(items.length)
-    // console.time('render:')
-    var _timing = performance.now()
-    var mother = document.getElementById('chat-timeline')
-    var i = 0;
-    for (i = 0; i < items.length; i++) {
-      nodes.appendChild(messageTemplate_.cloneNode(true))
-      // document.getElementById('chat-timeline').appendChild(nodes);
-    }
-    mother.appendChild(nodes)
-
-    // console.timeEnd('render:')
-    domPanel.update(performance.now() - _timing, 50);
-  })
-}
-
-setInterval(function () {
-  add20()
-}, 500)
-
-// document.addEventListener('DOMContentLoaded', function() {
-//   window.scroller =
-//     new InfiniteScroller(
-//       document.querySelector('#chat-timeline'),
-//       new GetData()
-//     );
-
-  // var stats = new Stats();
-  // var domPanel = new Stats.Panel('DOM Nodes', '#0ff', '#002');
-  // stats.addPanel(domPanel);
-  // stats.showPanel(3);
-  // document.body.appendChild(stats.dom);
-  // var TIMEOUT = 100;
-  // setTimeout(function timeoutFunc() {
-  //   // Only update DOM node graph when we have time to spare to call
-  //   // numDomNodes(), which is a fairly expensive function.
-  //   requestIdleCallback(function() {
-  //     domPanel.update(numDomNodes(document.body), 1500);
-  //     setTimeout(timeoutFunc, TIMEOUT);
-  //   });
-  // }, TIMEOUT);
-// });
   </script>
 </body>
 
