--- a/infinite/index.html
+++ b/infinite/index.html
@@ -96,7 +96,7 @@
         <img alt="" class="placeholder-img" src="null" lazy="loaded">
       </figure>
       <div class="a-item-wrap">
-        <p class="title ellipsis">婚色撩人狼性总裁轻点爱</p>
+        <p class="title ellipsis">贵女毒心邪王嗜宠无下限</p>
         <p class="author">1999</p>
         <p class="desc">“每月工资多少？身体有没有缺陷？外面有没有女人？”某女居高临下的看着某总裁，一脸严肃。沈大少唇角轻扬，“有没有缺陷，有没有女人你不是最清楚吗，至于工资……”“我养你！现在去领证！”还未说完，就被某个迫不及待的女人打断了…直接拖走，目标，民政局……总之这是一个先睡后婚的沈家大少诱妻，拐妻，最后宠妻的故事。</p>
         <div class="bottom">
