--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
       </p>
       <p>
         <a href="./test/mint-ui">
-          实验
+          实验0
         </a>
       </p>
       <p>
-        <a href="#">
-          简历
+        <a href="./infinite">
+          实验1
         </a>
       </p>
       <p>
