--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
       </p>
       <p>
         <a href="./test/mint-ui">
-          实验0
+          实验
         </a>
       </p>
       <p>
-        <a href="./infinite">
-          实验1
+        <a href="./infinite/index.html">
+          测试
         </a>
       </p>
       <p>
