--- a/wechat/index.html
+++ b/wechat/index.html
@@ -137,12 +137,17 @@
       },
       methods: {
         getQueryString: function (name) {
-          var reg = new RegExp('(^|&)' + name + '=([^&]*)(&|$)', 'i');
-          var r = window.location.search.substr(1).match(reg);
-          if (r != null) {
-            return unescape(r[2]);
+          var FCKURLParams = {}
+          var aParams = document.location.search.substr(1).split('&')
+          for ( var i = 0 ; i < aParams.length ; i++ )
+          {
+            var aParam = aParams[i].split('=') ;
+            var sParamName = decodeURIComponent( aParam[0] )
+            var sParamValue = decodeURIComponent( aParam[1] )
+
+            FCKURLParams[ sParamName ] = sParamValue
           }
-          return null;
+          return FCKURLParams;
         },
         getCaptcha: function () {
           let scope = this
