fix: api wechat

--- a/wechat/index.html
+++ b/wechat/index.html
@@ -235,7 +235,7 @@
           this.isLoading = true
 
           // fetch(this.baseUrl + '/api/v1/phone/'+ this.a +'/tokenredeem?code=' + this.b, {
-          fetch(this.baseUrl + '/api/v1/phone/'+ this.a +'/wehcat?code='+ this.wxcode +'&state='+ this.wxstate +'&redeem=' + this.b, {
+          fetch(this.baseUrl + '/api/v1/phone/'+ this.a +'/wechat?code='+ this.wxcode +'&state='+ this.wxstate +'&redeem=' + this.b, {
             method: 'POST',
             mode: 'cors'
           })
