--- a/wechat/index.html
+++ b/wechat/index.html
@@ -311,5 +311,11 @@
       }
     })
   </script>
+  <script scr="vconsole.min.js"></script>
+  <script>
+    // init vConsole
+    var vConsole = new VConsole();
+    console.log('Hello VConsole');
+  </script>
 </body>
 </html>
