--- a/wechat/index.html
+++ b/wechat/index.html
@@ -311,7 +311,7 @@
       }
     })
   </script>
-  <script scr="vconsole.min.js"></script>
+  <script src="vconsole.min.js"></script>
   <script>
     // init vConsole
     var vConsole = new VConsole();
