--- a/wechat/index.html
+++ b/wechat/index.html
@@ -189,7 +189,7 @@
               return response.text()
             })
             .then(function (body) {
-              console.log(body)
+              // console.log(body)
               var json = JSON.parse(body)
               scope.b64 = json.img
               scope.isCaptcha = false
